fixes the spacing on the homepage so the entire image fits on screen

--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -289,6 +289,7 @@ z-index: 11;
     background-color: transparent;
     z-index: 100;
   padding-top: 10px;
+  margin-top: -10px;
 }
         
 #background {
